--- a/public/index.html
+++ b/public/index.html
@@ -7,27 +7,55 @@
     <!-- External CSS -->
     <link rel="stylesheet" href="/vendor/normalize-4.1.1.css" type="text/css" />
 
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto+Condensed:300,300i,400,400i,700,700i" rel="stylesheet">
+
     <!-- App CSS -->
     <link rel="stylesheet" href="/styles/layout.css" type="text/css" />
+
+    <!-- App Nav CSS -->
+    <link rel="stylesheet" href="/styles/nav.css" type="text/css" />
+
+    <!-- App New-Tweet CSS -->
+    <link rel="stylesheet" href="/styles/new-tweet.css" type="text/css" />
+
+    <!-- App All-Tweet CSS -->
+    <link rel="stylesheet" href="/styles/all-tweets.css" type="text/css" />
 
     <!-- External JS -->
     <script type="text/javascript" src="/vendor/jquery-2.2.3.min.js"></script>
 
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/app.js"></script>
+    <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+
+
+
   </head>
 
   <body>
 
     <!-- Top nav bar (fixed) -->
     <nav id="nav-bar">
-      <img class="logo" src="/images/bird.png" width="80px" height="80px">
+      <img class="logo" src="/images/bird.png">
       <span class="header">Tweeter</span>
+      <button id="compose" type="button">Compose</button>
     </nav>
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-    </main>
 
+        <section class="new-tweet">
+            <h2>Compose Tweet</h2>
+              <form id="newTweet" action="/tweets" method="POST">
+                <textarea name="text" placeholder="What are you humming about?"></textarea>
+                <input type="submit" value="Tweet">
+                <span id= "count" class="counter">140</span>
+            </form>
+          </section>
+
+        <section class="all-tweets">
+        </section>
+    </main>
   </body>
 </html>
