updating mongodb branch

--- a/public/index.html
+++ b/public/index.html
@@ -44,12 +44,12 @@
 
     <!-- Page-specific (main) content here -->
     <main class="container">
-
+      <h5>Tweet must be less than 140 characters</h5>
         <section class="new-tweet">
             <h2>Compose Tweet</h2>
               <form id="newTweet" action="/tweets" method="POST">
                 <textarea name="text" placeholder="What are you humming about?"></textarea>
-                <input type="submit" value="Tweet">
+                <input id="submit" type="submit" value="Tweet">
                 <span id= "count" class="counter">140</span>
             </form>
           </section>
